--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,10 @@ cache:
   directories:
     - $HOME/.m2
 
+notifications:
+  email:
+    on_success: never
+    on_failure: always
+
 before_install:
   - chmod +x mvnw
